  `phobos_fini()`.
* Add scripts and a binary to test tape library
* The "phobos_admin_format" API function has been modified to be able to format
media whose status is not blank. A "force" parameter is added to manage this.
* Grouped read algorithm for tapes
* Locate update for pre-locking
    - We add two new parameters to the "phobos_locate" API call: 'focus_host'
      and 'nb_new_lock'.
    - We add the '--focus-host' option to the "phobos locate obj" command.

## 1.94.1

* Added RADOS as data storage backend (no package available yet)
* Added module-loader to manage io, fs, dev, lib and layout adapters dynamically
* Added drive migrate command
* Improved command documentation
* Internal LRS parallelization (read, write and format managed by device
  threads)
* Added locate modification design
* Modified drive lock API and command:
    - The "phobos xxx lock" API has changed: '--force' option is removed. The
option was only considered with devices, so removing it for media will not alter
its behavior.
    - The "phobos drive lock" API has changed: '--wait' option is added. Its
behavior is the same as the previous '--force' option.

## 1.94

* The "phobos_admin_format" API function has been modified to be able to send
multiple format requests in a single call. The medium id provided thus becomes
an array of medium ids, and the length of that array is added as a parameter.

* The "phobos_admin_format" API function has been modified to be able to limit
the number of concurrent format sent to the phobosd. A "nb_streams" parameter
is added to the parameters of the function, with 0 signifying "send all requests
at once".

## 1.93

* The "simple" layout is no longer available. It cannot be used through the CLI
and will not be recognized in the API anymore. Instead, an alias has been
provided in the default template.conf, emulating the "simple" layout behaviour.
The layout used is "raid1", with a replica count set to 1.